# Courses-Certificates

./: README.md
05.C Programming Bootcamp/: README.md
05.C Programming Bootcamp/06.Welcome First Program/: 02.exercise.c  03.exercise.c  04.exercise.c
05.C Programming Bootcamp/07.Comments & Format Specification/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c
05.C Programming Bootcamp/08.Practical Exercises & Solutions/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c
05.C Programming Bootcamp/09.Variables and Data Types/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c  10.exercise.c
05.C Programming Bootcamp/10.Practical Exercises & Solutions/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c  10.exercise.c
05.C Programming Bootcamp/12.Conditions And Control Flow/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c  10.exercise.c  11.exercise.c  12.exercise.c  13.exercise.c
05.C Programming Bootcamp/13.Practical Exercises & Solutions/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c
05.C Programming Bootcamp/14.Binary,Hex, and ASCII/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c
05.C Programming Bootcamp/15.Loops - For,While And Do-While/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c  10.exercise.c  11.exercise.c  12.exercise.c
05.C Programming Bootcamp/16.Practical Exercises & Solutions/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c  05.exercise.c  06.exercise.c  07.exercise.c  08.exercise.c  09.exercise.c  10.exercise.c
05.C Programming Bootcamp/17.Functions - Theory and Introduction/: 01.exercise.c  02.exercise.c  03.exercise.c  04.exercise.c
05.C Programming Bootcamp/18.Practical Exercises & Solutions/: 01.exercise.c  02.exercise.c  (+11 more)
06.C Programming Masterclass/: README.md
07.Advanced C Programming/: README.md
Lazar-main/: README.md
Projects/: CMakeLists.txt
Projects/Counter_Strike/: CMakeLists.txt  README.md
Projects/Counter_Strike/include/: BattleField.h  Defines.h  Player.h  PlayerInit.h
Projects/Counter_Strike/include/pistols/: DesertEagle.h  Fire.h  Glock.h  Pistol.h  PistolCommonFunctionality.h
Projects/Counter_Strike/src/: BattleField.c  Player.c  PlayersInit.c  main.c
Projects/Counter_Strike/src/pistols/: DesertEagle.c  Fire.c  Glock.c  PistolCommonFunctionality.c
Projects/Starcraft/: CMakeLists.txt  README.md
Projects/Starcraft/include/: BattleField.h  Defines.h  Helper.h  Protoss.h  ProtossTurn.h  Terran.h  TerranTurn.h  Vector.h
Projects/Starcraft/src/: BattleField.c  Helper.c  ProtossShips.c  ProtossTurn.c  TerranShips.c  TerranTurn.c  Vector.c  main.c
Projects/Warcraft/: CMakeLists.txt  README.md
Projects/Warcraft/include/: CastSpell.h  Defines.h  Hero.h  SpecialHeroAbilities.h  SpellInit.h
Projects/Warcraft/src/: CastSpell.c  Hero.c  SpecialHeroAbilities.c  SpellInit.c  main.c
(+471 files in other folders)
